--- a/nfo/index.html
+++ b/nfo/index.html
@@ -69,6 +69,13 @@
                     </small>
                 </div>
                 <div>
+                    <label for="googleModel">Model:</label>
+                    <select id="googleModel" name="googleModel" style="padding: 8px; margin: 5px 0 10px 0; border: 1px solid var(--input-border-color); background-color: var(--input-bg-color); color: var(--text-color); border-radius: 4px; width: 100%; box-sizing: border-box;">
+                        <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
+                        <option value="gemini-3-flash-preview">Gemini 3 Flash Preview</option>
+                    </select>
+                </div>
+                <div>
                     <label for="rpmLimit">Rate per Minute (Gemini):</label>
                     <input type="number" id="rpmLimit" name="rpmLimit" min="1" value="10" class="rpm-input">
                     <small>Default: 10 (Free tier, no CC Saved)</small>
