Add current location button and related functionality
- Introduced a new button for using the current location in the forecast interface, enhancing user experience by allowing quick access to local weather data.
- Implemented CSS styles for the current location button, including hover effects and active state management.
- Updated JavaScript to handle current location selection, ensuring it integrates smoothly with existing favorite location logic and updates the button state accordingly.
- Enhanced the loading logic to prioritize favorite locations over the current location when applicable, improving the overall functionality of the weather app.

--- a/forecast/index.html
+++ b/forecast/index.html
@@ -39,6 +39,7 @@
         <!-- Control Bar -->
         <section class="control-bar">
             <button id="favoriteBtn" class="btn btn-secondary favorite-btn">⭐️</button>
+            <button id="currentLocationBtn" class="btn btn-secondary current-location-btn" title="Use Current Location">📍</button>
             <button id="locationsBtn" class="btn btn-secondary locations-btn">🌎Locations ▾</button>
             <button id="refreshBtn" class="btn btn-secondary">Refresh</button>
             <label class="toggle-label">
