Add Mastermind game to index and detail its features

--- a/index.html
+++ b/index.html
@@ -316,6 +316,13 @@
                 },
                 {
                     "@type": "SoftwareApplication",
+                    "name": "Mastermind",
+                    "description": "Terminal code-breaking game in Go. Guess the 4-peg secret in 12 turns with colored pegs and green/yellow feedback. Key-by-key input, -set for two-player, playtime on win or loss.",
+                    "url": "https://kreft.us/mind/",
+                    "applicationCategory": "Game"
+                },
+                {
+                    "@type": "SoftwareApplication",
                     "name": "vBTC",
                     "description": "Command-line Bitcoin trading simulator with real-time market data, virtual portfolio management, transaction ledger, and 1-Hour SMA analysis.",
                     "url": "https://kreft.us/vbtc/",
@@ -524,6 +531,21 @@
                             <div>
                                 <h2>GetForecast</h2>
                                 <p><b>GetForecast</b> is a PowerShell script that retrieves and displays detailed weather information for a specified location using the National Weather Service API. It accepts US zip codes or "City, State" strings, and provides current conditions, hourly forecasts, daily forecasts, weather alerts, and more with smart color-coding and interactive display modes. Features include geocoding via OpenStreetMap Nominatim API, temperature trend detection, wind gust information, dew point calculations, and an interactive mode with keyboard controls. When a NOAA tide station is found within 100 miles, displays NOAA Station information with clickable links to tide predictions, datums, and water level data. No API registration required.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="project-row" onclick="window.location.href='./mind/';">
+                    <td class="project-image-cell">
+                        <a href="./mind/" tabindex="-1">
+                            <img src="./images/mind.png" alt="Mastermind terminal code-breaking game screenshot" loading="lazy">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./mind/" tabindex="-1">
+                            <div>
+                                <h2>Mastermind</h2>
+                                <p><b>Mastermind</b> is a terminal code-breaking game written in Go. Guess the secret code of 4 pegs in up to 12 turns. Six colors (R G B C M Y or 1–6); key-by-key input with colored pegs, green/yellow feedback. Use <code>-set r22m</code> to set a code for another player. Playtime shown on win or loss. Downloads and README on the project page.</p>
                             </div>
                         </a>
                     </td>
