Enhance Mastermind game experience with terminal title and exit prompt
- Set terminal window title to "Mastermind - Crack the code!" for improved user context.
- Added a prompt to wait for any key press before exiting after a win or loss, enhancing user interaction.
- Updated peg color in the HTML file for better visual distinction.

--- a/mind/index.html
+++ b/mind/index.html
@@ -31,7 +31,7 @@
         .project-text-cell .peg-b { color: #06c !important; }
         .project-text-cell .peg-c { color: #09c !important; }
         .project-text-cell .peg-m { color: #c0c !important; }
-        .project-text-cell .peg-y { color: #c90 !important; }
+        .project-text-cell .peg-y { color: #cc0 !important; }
         @media (max-width:900px){ .project-image-cell, .project-text-cell{ display:block; width:100%; box-sizing:border-box; } .project-image-cell{ max-width:none; padding-right:0; padding-bottom:1rem; } .project-image-cell img{ width:auto; max-width:100%; margin:0; } }
     </style>
     <meta name="description" content="Mastermind is a terminal code-breaking game in Go. Guess the 4-peg secret in 12 turns with colored pegs and green/yellow feedback.">
